# univorch

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  uninstall.sh  univorch.sh
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  memoria.yml  publish.yml
claude/: arquitectura-debate.md  decisiones.md  desarrollo.md  diario.md  ideas-pendientes.md  proyecto.md
demo/: README.md  prueba_def.yml  setup.yml
demo/teaching/: students-redes.yml  subject-redes.yml
demo/ui_kits/: admin-quasar.html  admin-standalone.html  user-quasar.html  user-standalone.html
docs/: architecture.md  arquitectura.md  diagrams.md  environment.md  glossary.md  ideas-raw.md  plan.md  requirements.md  requisitos.md  technologies.md  tutorial-profesor.md  vision.md
docs/ideas/: Anteproyecto_Claudio_Mar-2026-Revisado.docx  DESIGN.md  Ideas_orquestador.odt  Necesidad.odt  anteproyecto.md  ideas-orquestador.md  ideas-raw.md  necesidad.md
docs/memoria/: .latexmkrc  README.md  main.tex  references.bib
docs/memoria/_notes/: state-of-the-art-research.md
docs/memoria/appendices/: A-manual-admin.tex  B-requirements.tex  C-decisiones.tex  D-cli-reference.tex  E-conclusiones-castellano.tex
docs/memoria/chapters/: 01-introduccion.tex  02-conceptos.tex  02-estado-arte.tex  03-estado-arte.tex  03-metodologia.tex  04-desarrollo.tex  04-metodologia.tex  05-conclusiones.tex  05-desarrollo.tex  06-conclusiones.tex
docs/memoria/figures/mermaid/: components.mmd  containers.mmd  context.mmd  deployment.mmd  domain-models.mmd  engine-rest.mmd  load-flow.mmd  state-machine.mmd  two-layers.mmd
docs/memoria/frontmatter/: abstract.tex  agradecimientos.tex  glosario.tex  resumen.tex
docs/memoria/template/sty_files/: plain_cover-whiteuma.sty
docs/schema/: definition.schema.json
docs/teaching/: architecture.md  requirements.md  vision.md
scripts/: install-dev-tools.sh  sync-overleaf.sh
scripts/lib/: recterm.bash
src/univorch/: __init__.py  __main__.py  models.py  parser.py  resolver.py  service.py
src/univorch/connectors/: __init__.py  base.py  mock.py  types.py
src/univorch/interfaces/: __init__.py
src/univorch/interfaces/cli/: __init__.py  app.py
src/univorch/interfaces/rest/: __init__.py  __main__.py  app.py  client.py
src/univorch/interfaces/web/: __init__.py  app.py
src/univorch/jobs/: __init__.py  commands.py  engine.py
src/univorch/persistence/: __init__.py
src/univorch/persistence/tinydb/: __init__.py  repositories.py
src/univorch/teaching/: __init__.py  models.py  operations.py  students.py  subject.py
tests/: conftest.py
tests/integration/: test_rest.py  test_rest_client.py  test_schema.py  test_service.py  test_teaching_ops.py
tests/unit/: test_cli.py  test_commands.py  test_connector_base.py  test_connector_types.py  test_engine.py  test_mock_connector.py  test_models.py  test_package.py  test_parser.py  test_repositories.py  test_resolver.py  test_rest_main.py  test_teaching.py  test_web.py
